# sdl-platformer

./: Cargo.toml
src/: app.rs  draw.rs  main.rs
src/app/: game.rs
src/app/game/: body.rs  components.rs  entity.rs  systems.rs
src/app/game/systems/: collision.rs  collisions.rs  damage.rs  debug_rendering.rs  draw.rs  draw_enemies.rs  draw_floors.rs  draw_players.rs  enemy_ai.rs  movement.rs  physics.rs  player_ctrl.rs  rendering.rs  respawn.rs  stuck_detection.rs  system_utils.rs
