[package]
edition = "2018"
name = "sdlgame"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
rand = "*"

[dependencies.sdl2]
default-features = false
features = ["ttf", "image", "gfx", "mixer"]
version = "0.35"
