[package]
edition = "2018"
name = "sdlgame"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
lazy_static = "*"
parry2d = "*"
rand = "*"

[dependencies.sdl2]
default-features = false
features = ["ttf", "image", "gfx", "mixer"]
version = "0.35"
